# zsm-sagemath-lsp.nvim

./: .gitignore  CHANGELOG.md  COMPLETION.md  CONTRIBUTING.md  FAQ.md  INSTALL.md  LICENSE  Makefile  PROJECT.md  QUICKSTART.md  README.md  README.zh.md  SUMMARY.md  package.json  pyproject.toml  test.sage
doc/: config-examples.lua  example.lua  zsm-sagemath-lsp.txt
ftdetect/: sage.vim
lua/zsm-sagemath-lsp/: health.lua  init.lua  utils.lua
snippets/: sage.json
src/zsm_sagemath_lsp/: __main__.py  config.py  python_analysis.py  runtime.py  sage_bridge.py  server.py  shadow.py  symbols.py
src/zsm_sagemath_lsp/data/: __init__.py
syntax/: sage.vim
tests/: test_shadow.py
