[project]
name = "zsm-sagemath-lsp"
version = "0.2.0"
description = "SageMath LSP and Neovim plugin built for uv workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0" }
authors = [{ name = "zsm" }]
dependencies = ["jedi>=0.19.2", "ruff>=0.12.0", "ty>=0.0.23"]

[project.scripts]
zsm-sagemath-lsp-server = "zsm_sagemath_lsp.__main__:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zsm_sagemath_lsp = ["data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"
